--- a/FlashBoxHome/index.html
+++ b/FlashBoxHome/index.html
@@ -1,2 +1,105 @@
-﻿Welcome Flash Box Games！
-Thank you！！
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FlashBoxGames - BlockMaster</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .game-info {
+            text-align: center;
+        }
+
+        .game-info img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .description {
+            margin-top: 20px;
+            text-align: justify;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
+    <style>
+        body {
+            background-image: url('pic/logo.png');
+            background-size: cover; /* 让背景图片填满整个屏幕 */
+            background-position: center; /* 让背景图片居中显示 */
+            background-repeat: no-repeat; /* 防止背景图片重复 */
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>FlashBoxGames </h1>
+    </header>
+    <nav>
+        <a href="#">首页</a>
+        <a href="#">关于游戏</a>
+        <a href="#">截图</a>
+        <a href="#">下载</a>
+        <a href="#">联系我们</a>
+    </nav>
+    <div class="container">
+        <div class="game-info">
+            <h2>BlockMaster</h2>
+            <img src="pic/da.png" alt="BlockMaster截图">
+            <div class="description">
+                <p>欢迎来到BlockMaster！这是一款令人上瘾的方块游戏，挑战你的反应和智力。</p>
+                <p>在游戏中，你需要快速反应，移动方块以填满整行或整列，当一行或一列被填满时，方块将消失并获得分数。</p>
+                <p>BlockMaster拥有简单的游戏规则，但却有着无尽的挑战，赶快加入我们的游戏吧！</p>
+		<li><a href="https://play.google.com/store/apps/details?id=com.GlitterChest.BlockPuzzle">点此游玩！</a></li>
+            </div>
+        </div>
+    </div>
+    <footer>
+        &copy; 2024 FlashBoxGames. All Rights Reserved.
+    </footer>
+</body>
+</html>
