--- a/FlashBoxHome/index.html
+++ b/FlashBoxHome/index.html
@@ -74,6 +74,7 @@
             background-repeat: no-repeat; /* 防止背景图片重复 */
         }
     </style>
+	<link rel="icon" href="pic/myicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
